<?xml version="1.0"?>
<package>
  <name>volta_hardware</name>
  <version>1.1.0</version>
  <description>The volta_hardware package</description>

  <author email="james.abraham@botsync.co">James Abraham</author>

  <maintainer email="james.abraham@botsync.co">James Abraham</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>volta_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>volta_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <export>
  </export>
</package>
